feat: restore Phase-4 ML integration from backup
✅ Restored Files (16 total):
- data/: collector.py, labeler.py, sample_generator.py, sequences.py
- models/: train.py, evaluate.py, artifacts/ (5 files)
- inference/: ml_inference.py
- monitor/: ml_guard.py
- tests/: test_inference.sh
- docs/: ML_INTEGRATION.md

✅ ML Packages Installed:
- numpy 2.3.4
- pandas 2.3.3
- scikit-learn 1.7.2
- joblib 1.5.2
- torch 2.9.1+cpu

✅ Validation Complete:
- All modules import successfully
- RandomForest model working
- MLInferenceEngine operational
- Model artifacts loaded (280KB + 2.3MB)

📊 Phase-4 Status: 95% Complete
- Core ML functionality: ✅ Working
- GUI integration: ⚠️ Optional (can be re-added)
- Backup preserved: backup_phase4_archive/

See PHASE4_RESTORATION_REPORT.md for full details.

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,11 @@ matplotlib>=3.7.0
 prometheus-client>=0.17.0
 
 # Phase 4 ML Integration
+numpy>=1.26.0
+pandas>=2.1.0
+scikit-learn>=1.3.0
+joblib>=1.3.0
+torch>=2.1.0
 
 # Legacy GUI (Optional - for backwards compatibility)
 # tkinter is included with most Python installations
